# ChaparGames

./: CMakeLists.txt  README.md
DB/: Players.tsv
includes/Games/: Game.h  GuessMovieGame.h  SynonymGame.h  YourGame.h
includes/Player/: Player.h
src/: main.cpp
src/Games/: Game.cpp  GuessMovieGame.cpp  SynonymGame.cpp  YourGame.cpp
src/Player/: Player.cpp
